# whim-ws

./: .gitignore  Cargo.toml  README.md  TODO.md  whim.toml
encrypted/: server.crt  server.key
http/: Cargo.toml
http/src/: configuration.rs  encryption.rs  main.rs  routing.rs  shell.rs
http/src/cards/: mod.rs
scripts/: tmux-check.zsh  tmux-run.zsh
src/: client.rs  configuration.rs  encryption.rs  error.rs  lib.rs  main.rs  routing.rs  shell.rs
unencrypted/: server.crt  server.key
web/: Card.js  Greeter.js  Host.js  Store.js  actions.js  host.js  index.html  main.js  reducers.js  selectors.js  style.css
web/js/: hello.js  main.js
