[package]
name = "whim"
version = "0.1.0"
authors = ["Jeff Schwab <jeff@unbuggy.com>"]
edition = "2018"

[dependencies]

# Serialization
[dependencies.serde]
features = ["derive"]
version = "1.0"

# Event loop, and a bunch of async event support
[dependencies.tokio]
version = "0.3"
features = ["fs", "macros", "process", "rt-multi-thread"]

# Compatibility layer, so we can depend on a newer version of tokio (the async
# event framework) than the warp (the web server) does.
[dependencies.tokio-compat-02]
version = "0.1.2"

# Config parser
[dependencies.toml]
version = "0.5"

# Web server
[dependencies.warp]
features = ["tls"]
path = "../../pkg/warp"
version = "0.2"
